Add Module 2 drug–gene search subsystem and Module 3 lookup bridge.
- New tables gene / drug_gene (varchar FK to existing drug) plus seed SQL.
- DAO with parameterised LIKE search, COUNT, server-side LIMIT/OFFSET.
- Servlets for /module2/search, /module2/detail and /module3/preview.
- JSP views with pagination and escaped keyword highlighting.
- JUnit checks for COUNT/page total, page-size cap, detail round-trip.
- Hardened JDBC URL with allowPublicKeyRetrieval, fail-fast DBUtils,
  importer null-safety for current PharmGKB JSON shapes.

Co-authored-by: Cursor <cursoragent@cursor.com>